--- a/register.html
+++ b/register.html
@@ -472,10 +472,10 @@
 
                         if (pendingCheckout) {
                             // Retour au processus de checkout
-                            window.location.href = '/bawol/app.html';
+                            window.location.href = '/bawol/index.html';
                         } else {
                             // Redirection normale
-                            window.location.href = '/bawol/app.html';
+                            window.location.href = '/bawol/index.html';
                         }
                     }, 2000);
 
